--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,13 +4,35 @@
 }
 
 body {
-    background-color: rgb(190, 152, 225);
+    background-color: rgb(71, 199, 235);
+}
+
+img.lado {
+    float: right;
+    width: 100px;
+    height: auto;
+}
+
+img.logo {
+    float: left;
+    width: 50px;
+    height: auto;
 }
 
 main {
-    background-color: white;
+    background-color: rgb(129, 211, 255);
     width: 500px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.475);
+}
+
+h1 {
+    color: rgb(54, 9, 97);
+    font-size: 28px;
+}
+
+h2 {
+    color: rgb(54, 9, 97);
+    font-size: 20px;
 }
