--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,6 +13,12 @@ img.lado {
     height: auto;
 }
 
+img.lado1 {
+    float: right;
+    width: 45px;
+    height: auto;
+}
+
 img.logo {
     float: left;
     width: 50px;
